--- a/index.html
+++ b/index.html
@@ -1,1 +1,195 @@
-<h1>Hello, GitHub Pages!</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Learn Chinese - HSK Vocabulary</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body data-theme="dark"> <!-- Start page with dark mode -->
+
+<div class="header">
+    <h1>Learn Chinese - HSK Vocabulary</h1>
+    <div class="controls">
+        <label>
+            <input type="checkbox" id="showCharacters" checked> Show Characters
+        </label>
+        <label>
+            <input type="checkbox" id="showPinyin" checked> Show Pinyin
+        </label>
+        <label>
+            <input type="checkbox" id="showDefinitions" checked> Show Definitions
+        </label>
+        <label>
+            <input type="checkbox" id="includeHandwritten"> Include Handwritten
+        </label>
+        <div class="theme-toggle" id="themeToggle">🌙 Dark Mode</div>
+        <button id="startFlashcards">Start Flashcards</button>
+    </div>
+</div>
+
+<div id="vocab-container"></div>
+
+<!-- Flashcard Container -->
+<div class="overlay" id="overlay"></div>
+<div class="flashcard-container" id="flashcardContainer">
+    <div class="flashcard-content">
+        <span class="character"></span>
+        <span class="pinyin"></span>
+        <span class="definition"></span>
+        <img class="handwritten-img" src="" alt="" style="display: none;">
+    </div>
+    <div class="flashcard-controls">
+        <button id="stopFlashcards">Stop</button>
+        <button id="nextCard">Next Card</button>
+    </div>
+</div>
+
+<script>
+    let vocabItems = [];
+    let currentIndex = 0;
+
+    async function loadVocab() {
+        const response = await fetch('vocab.json');
+        const data = await response.json();
+        vocabItems = data.vocab;
+        const vocabContainer = document.getElementById('vocab-container');
+
+        data.vocab.forEach(item => {
+            const levelDiv = document.querySelector(`#${item.library}`) || createLevel(item.library);
+
+            const vocabDiv = document.createElement('div');
+            vocabDiv.classList.add('vocab-item');
+
+            const characterDiv = document.createElement('div');
+            characterDiv.innerHTML = `<span class="label">Character:</span> <span class="character">${item.character}</span>`;
+            vocabDiv.appendChild(characterDiv);
+
+            const pinyinDiv = document.createElement('div');
+            pinyinDiv.innerHTML = `<span class="label">Pinyin:</span> <span class="pinyin">${item.pinyin}</span>`;
+            vocabDiv.appendChild(pinyinDiv);
+
+            const definitionDiv = document.createElement('div');
+            definitionDiv.innerHTML = `<span class="label">Definition:</span> <span class="definition">${item.definition}</span>`;
+            vocabDiv.appendChild(definitionDiv);
+
+            if (item.handwritten.length > 0) {
+                const handwrittenDiv = document.createElement('div');
+                item.handwritten.forEach(url => {
+                    const img = document.createElement('img');
+                    img.classList.add('handwritten-img');
+                    img.src = url;
+                    handwrittenDiv.appendChild(img);
+                });
+                vocabDiv.appendChild(handwrittenDiv);
+            }
+
+            levelDiv.appendChild(vocabDiv);
+            vocabContainer.appendChild(levelDiv);
+        });
+    }
+
+    function createLevel(library) {
+        const levelDiv = document.createElement('div');
+        levelDiv.id = library;
+        levelDiv.classList.add('level');
+
+        const levelHeader = document.createElement('h2');
+        levelHeader.textContent = library.toUpperCase();
+        levelDiv.appendChild(levelHeader);
+
+        return levelDiv;
+    }
+
+    function updateVisibility() {
+        const showCharacters = document.getElementById('showCharacters').checked;
+        const showPinyin = document.getElementById('showPinyin').checked;
+        const showDefinitions = document.getElementById('showDefinitions').checked;
+        const includeHandwritten = document.getElementById('includeHandwritten').checked;
+
+        // Update main page visibility
+        document.querySelectorAll('.vocab-item .character').forEach(el => {
+            el.style.display = showCharacters ? 'inline' : 'none';
+        });
+        document.querySelectorAll('.vocab-item .pinyin').forEach(el => {
+            el.style.display = showPinyin ? 'inline' : 'none';
+        });
+        document.querySelectorAll('.vocab-item .definition').forEach(el => {
+            el.style.display = showDefinitions ? 'inline' : 'none';
+        });
+        document.querySelectorAll('.vocab-item .handwritten-img').forEach(el => {
+            el.style.display = showCharacters && includeHandwritten ? 'inline-block' : 'none';
+        });
+
+        // Update flashcard visibility
+        const flashcardCharacter = document.querySelector('.flashcard-content .character');
+        const flashcardPinyin = document.querySelector('.flashcard-content .pinyin');
+        const flashcardDefinition = document.querySelector('.flashcard-content .definition');
+        const flashcardHandwritten = document.querySelector('.flashcard-content .handwritten-img');
+
+        if (flashcardCharacter) flashcardCharacter.style.display = showCharacters ? 'block' : 'none';
+        if (flashcardPinyin) flashcardPinyin.style.display = showPinyin ? 'block' : 'none';
+        if (flashcardDefinition) flashcardDefinition.style.display = showDefinitions ? 'block' : 'none';
+        if (flashcardHandwritten) flashcardHandwritten.style.display = showCharacters && includeHandwritten ? 'block' : 'none';
+    }
+
+    function showFlashcard(index) {
+        const flashcardContainer = document.getElementById('flashcardContainer');
+        const overlay = document.getElementById('overlay');
+        const item = vocabItems[index];
+
+        document.querySelector('.flashcard-content .character').textContent = item.character;
+        document.querySelector('.flashcard-content .pinyin').textContent = item.pinyin;
+        document.querySelector('.flashcard-content .definition').textContent = item.definition;
+        const handwrittenImg = document.querySelector('.flashcard-content .handwritten-img');
+        if (item.handwritten.length > 0) {
+            handwrittenImg.src = item.handwritten[0];
+            handwrittenImg.style.display = 'block';
+        } else {
+            handwrittenImg.style.display = 'none';
+        }
+
+        flashcardContainer.style.display = 'block';
+        overlay.style.display = 'block';
+        updateVisibility(); // Apply selector settings to flashcard
+    }
+
+    document.addEventListener('DOMContentLoaded', function () {
+        const flashcardContainer = document.getElementById('flashcardContainer');
+        const overlay = document.getElementById('overlay');
+        const startFlashcardsButton = document.getElementById('startFlashcards');
+        const stopFlashcardsButton = document.getElementById('stopFlashcards');
+        const nextCardButton = document.getElementById('nextCard');
+
+        // Ensure modal doesn't display on page load
+        flashcardContainer.style.display = 'none';
+        overlay.style.display = 'none';
+
+        // Add event listeners for visibility controls
+        document.getElementById('showCharacters').addEventListener('change', updateVisibility);
+        document.getElementById('showPinyin').addEventListener('change', updateVisibility);
+        document.getElementById('showDefinitions').addEventListener('change', updateVisibility);
+        document.getElementById('includeHandwritten').addEventListener('change', updateVisibility);
+
+        startFlashcardsButton.addEventListener('click', function () {
+            currentIndex = 0;
+            showFlashcard(currentIndex);
+        });
+
+        stopFlashcardsButton.addEventListener('click', function () {
+            flashcardContainer.style.display = 'none';
+            overlay.style.display = 'none';
+        });
+
+        nextCardButton.addEventListener('click', function () {
+            currentIndex = (currentIndex + 1) % vocabItems.length;
+            showFlashcard(currentIndex);
+        });
+
+        loadVocab();
+    });
+</script>
+
+</body>
+</html>
+
